[package]
name = "async-embedded-sdmmc"
description = "Embedded sdmmc driver with async support"
license = "MIT OR Apache-2.0"
version = "0.2.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2024"
repository = "https://github.com/qiuchengxuan/async-sdmmc"

[dependencies]
async-trait = { version = "0.1", optional = true }
bitfield = "0.13"
deasync = "0.1"
derive_more = { version = "2.0", optional = true, features = ["display"] }
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }
embedded-timers = "0.4.0"
gpio = { version = "0.4", optional = true }
log = "0.4"
nb = "1.0"
spidev = { version = "0.7", optional = true }
void = { version = "1.0", optional = true }

[dev-dependencies]
hex-literal = "0.3"

[features]
async = ["async-trait"]
std = []
linux-spi = ["std", "gpio", "void", "spidev", "derive_more"]
log-max-level-off = ["log/max_level_off", "log/release_max_level_off"]
default = ["async", "async-trait"]
derive_more = ["dep:derive_more"]

[lib]
name = "sdmmc"
