[package]
name = "sdmmc-test"
version = "0.1.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2021"
repository = "https://github.com/qiuchengxuan/async-sdmmc"

[dependencies]
async-embedded-sdmmc = { path = ".." }
async-std = "1.0"
async-trait = "0.1"
clap = "2"
bitfield = "0.13"
embedded-hal = "0.2"
log = { version = "0.4", features = ["release_max_level_off"] }
mbr-nostd = "0.1"
nb = "1.0"
gpio = "0.4"
pretty-hex = "0.2"
simple-log = "1.3"
spidev = "0.5"
void = "1.0"

[[bin]]
name = "sdmmc"
path = "src/main.rs"
test = false
doc = false
