[package]
name = "sdmmc-test"
version = "0.1.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2021"
repository = "https://github.com/qiuchengxuan/async-sdmmc"

[dependencies]
async-embedded-sdmmc = { path = "..", features = ["linux-spi"] }
async-std = "1.0"
async-trait = "0.1"
bitfield = "0.13"
clap = { version = "4", features = ["derive"] }
deasync = "0.1"
embedded-hal = "0.2"
env_logger = "0.10"
log = "0.4"
mbr-nostd = "0.1"
nb = "1.0"
pretty-hex = "0.2"
size = "0.4"
spidev = "0.5"

[features]

[[bin]]
name = "sdmmc"
path = "src/main.rs"
test = false
doc = false
